--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,16 @@ dependencies:
   rxdart: ^0.27.3
   google_fonts: ^2.2.0
   uuid: ^3.0.5
+  json_annotation: ^4.4.0
+  equatable: ^2.0.3
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  json_serializable: ^6.1.3
+  build_runner: ^2.1.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
